# ReservaSimulator

./: Alimentos.cpp  Alimentos.h  Animais.cpp  Animais.h  CMakeLists.txt  Comandos.cpp  Comandos.h  Historico.cpp  Historico.h  Interface.cpp  Interface.h  README.md  Reserva.cpp  Reserva.h  Simulador.cpp  Simulador.h  Terminal.cpp  Terminal.h  TipoAlimentos.cpp  TipoAlimentos.h  TipoAnimais.cpp  TipoAnimais.h  comandos.txt  constantes.txt  main.cpp  notas.txt  util.h
TipoAlimentos/: AlimentoMisterioso.cpp  AlimentoMisterioso.h  Bife.cpp  Bife.h  Cenoura.cpp  Cenoura.h  Corpo.cpp  Corpo.h  Relva.cpp  Relva.h
TipoAnimais/: AnimalMisterioso.cpp  AnimalMisterioso.h  Canguru.cpp  Canguru.h  Coelho.cpp  Coelho.h  Lobo.cpp  Lobo.h  Ovelha.cpp  Ovelha.h
